# agentxx

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md
agent/: .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  agentxx-config.yaml  agentxx.cpp
agent/benchmark/: CMakeLists.txt  bench_aho_corasick.h  bench_deepagent.h  bench_regex.h  bench_router.h  bench_string_util.h  bench_util.h  benchmark_main.cpp
agent/benchmark/results/: bench_20260711_142406.json  bench_20260713_223343.json  bench_20260717_231011.json
agent/client/: CMakeLists.txt  client.cpp  train.h  util.h
agent/lib/: CMakeLists.txt
agent/lib/agent/: acp_server.h  config.h  context.h  deepagent.h  help.md  training.h
agent/lib/include/agentxx/: agentxx.h  events.h
agent/lib/include/agentxx/agent/: acp_server.h  config.h  config_static.h  context.h  deepagent.h  event_bridge.h  interrupt_handler.h  permission_prompter.h  prompt.h  stdin_reader.h  subagent_supervisor.h  training.h
agent/lib/include/agentxx/expand/: audio_stream.h  codegraph_manager.h  get_cpu_gpu_use.h  screen_capture.h  text_selection_monitor.h
agent/lib/include/agentxx/middlewares/: event_stream.h  events.h  interrupt_handler.h  middleware.h  permission.h  planning.h  skill.h  subagent_supervisor.h  summarization.h
agent/lib/include/agentxx/nodes/: agentcall.h  modelcall.h  toolcall.h  warp_handle.h
agent/lib/include/agentxx/protocol/: acp_server.h  anthropic_provider.h  mcp_client.h  mcp_server.h  openai_provider.h
agent/lib/include/agentxx/server/: acp_server.h  mcp_client.h  mcp_server.h  openai_provider.h
agent/lib/include/agentxx/tools/: codegraph_tool.h  cross_agent_query.h  execute_command.h  filesystem.h  get_current_datetime.h  planning.h  rag_search.h  share_store.h  string.h  sub_agent.h  system.h  tool.h  tool_skill_search.h  ui_control.h  web_search.h
agent/lib/include/agentxx/util/: aho_corasick.h  exception.h  http_client.h  http_header.h  http_server.h  log.h  lru_cache.h  regex.h  router.h  string_util.h  util.h
agent/lib/include/middlewares/: middleware.h  permission.h  planning.h
agent/lib/include/tools/: get_current_datetime.h  share_store.h  string.h  tool_skill_search.h
agent/lib/include/util/: regex.h
agent/lib/middlewares/: middleware.cpp  middleware.h  permission.h  planning.h  skill.h  summarization.h  todo_list.h
agent/lib/nodes/: agentcall.h  middleware.h  middleware_handle.h  modelcall.h  skill.h  toolcall.h  warp_handle.h
agent/lib/src/: agentxx.cpp
agent/lib/src/expand/: audio_stream.cpp  codegraph_manager.cpp  get_cpu_gpu_use.cpp  screen_capture.cpp  text_selection_monitor.cpp
agent/lib/src/middlewares/: middleware.cpp
agent/lib/src/tools/: ui_control.cpp
agent/lib/src/util/: regex.cpp  string_util.cpp  util.cpp
agent/lib/tools/: execute_command.h  filesystem.h  get_current_datetime.h  memory.h  planning.h  rag_search.h  share_store.h  skill.h  string.h  sub_agent.h  temp_store.h  todo_list.h  tool.h  tool_skill_search.h  ui_control.h  web_search.h  websearch.h
agent/lib/util/: aho_corasick.h  http_client.h  hyperscan.h  log.h  string_util.h  util.cpp
agent/script/: android_release_build.sh  client_run.bat  client_run.sh  debug_build.bat  debug_build.sh  linux_client_run.sh  linux_debug_build.sh  linux_release_build.sh  linux_temp_test_run.sh  linux_test_run.sh  mac_debug_build.sh  mingw_client_run.sh  mingw_debug_build.sh  release_build.bat  release_build.sh  release_client_run.bat  release_client_run.sh  temp_test_run.sh  test_run.bat  test_run.sh  windows_client_run.bat  windows_debug_build.bat  windows_release_build.bat  windows_test_run.bat
agent/test/: CMakeLists.txt  test.cpp  test_acp.cpp  test_acp.h  test_acp_server.cpp  test_acp_server.h  test_anthropic_provider.cpp  test_anthropic_provider.h  test_codegraph_tools.cpp  test_codegraph_tools.h  test_command_tools.cpp  test_command_tools.h  test_command_tools.hpp  test_cpu_gpu_use.cpp  test_cpu_gpu_use.h  test_crossagent.cpp  test_crossagent.h  test_datetime_tool.cpp  test_datetime_tool.h  test_deepagent.cpp  test_deepagent.h  test_event_bridge.cpp  test_event_bridge.h  test_event_stream.cpp  test_event_stream.h  test_events.cpp  test_events.h  test_filesystem_tools.cpp  test_filesystem_tools.h  test_filesystem_tools.hpp  test_framework.h  test_http.cpp  test_http.h  test_http_client.h  test_interrupt_bus.cpp  test_interrupt_bus.h  test_mcp.cpp  test_mcp.h  test_mcp_server.cpp  test_mcp_server.h  (+20 more)
agent/test/temp/: CMakeLists.txt  temp_test.cpp
agentxx/: README.md  api.py  graph.py  langgraph.json  main.py  package.json  pnpm-lock.yaml  runLang.bat
agentxx-langgraph/: .env  .gitignore  package.json  pnpm-lock.yaml
agentxx-langgraph/apps/agent/: langgraph.json  main.py
agentxx/apps/agent/: langgraph.json  main.py  package.json  pyproject.toml  run.bat
agentxx/script/: runLang.bat  runServerPy.bat  runWebui.bat
agentxx/server-cpp-langgraph/: CMakeLists.txt  README.md  agentxx.cpp  agentxx.h
agentxx/server-cpp-langgraph/client/: CMakeLists.txt  client.cpp
agentxx/server-cpp-langgraph/test/: CMakeLists.txt  test.cpp
agentxx/server-py-langgraph/: .env  update-deps.py
agentxx/src/: graph.py  test.py  work_manager.py
copilotkit/: CLAUDE.md  package.json
script/: fix_git_submodule_link.sh
server-cpp-langgraph/: .gitignore  CHANGELOG.md  CMakeLists.txt
server-cpp-langgraph/client/: client.cpp
server-cpp-langgraph/lib/agent/: acp_server.h  config.h  deepagent.h  tools.h
server-cpp-langgraph/lib/nodes/: toolcall.h
server-cpp-langgraph/lib/tools/: execute_command.h  filesystem.h  get_current_datetime.h  get_current_system_datetime.h  memory.h  string.h  websearch.h
server-cpp-langgraph/lib/util/: http_client.h  hyperscan.h  log.cpp  log.h  string_util.cpp  string_util.h  util.h  utilxx.h
server-cpp-langgraph/script/: client_debug_build.sh  client_run.sh  debug_build.sh  release_build.sh  test_run.sh
server-cpp-langgraph/test/: test.cpp
server-py-langgraph/: .gitignore  README.md  pyproject.toml
tool/: fix_git_submodule_link.sh  get-gpu-use.ps1
(+73 files in other folders)
